# django-ticket-manager

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  ticket_manager
config/: settings.py  urls.py
tickets/: admin.py  models.py  serializers.py  urls.py  views.py
tickets/migrations/: 0001_initial.py
